# ComfyUI-PowerVision

./: '  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  REGISTRY_SETUP.md  SA2VA_INTEGRATION.md  VIDEO_OPTIMIZATION_GUIDE.md  __init__.py  config.py  pyproject.toml  requirements.txt  rules.md  tatus  test_basic.py  test_integration.py  utils.py
examples/: README.md  advanced_object_detection.json  basic_image_recognition.json  powervision_example.json  video_analysis.json
nodes/: __init__.py  detection_nodes.py  image_nodes.py  model_nodes.py  sa2va_nodes.py  utility_nodes.py
web/css/: powervision.css
web/docs/: MyNode.md
web/js/: powervision.js
